of: overlay_mgr: Add device tree overlay manager
Device tree overlay manager is used to merge overlays specified using
kernel command lines as: overlay_mgr.overlays=<overlay1,overlay2,...>

Appropriate overlays needs to be present in the firmware directory of
the Root File System.

Signed-off-by: Manivannan Sadhasivam <manivannan.sadhasivam@linaro.org>

--- a/drivers/of/Kconfig
+++ b/drivers/of/Kconfig
@@ -102,4 +102,13 @@ config OF_OVERLAY
 config OF_NUMA
 	bool
 
+config OF_OVERLAY_MGR
+	bool "Device Tree overlay manager"
+	default n
+	depends on OF_OVERLAY
+	help
+	  Device Tree overlay manager is used to merge overlays specified
+	  using kernel command line. Appropriate overlays needs to be stored
+	  under the firmware directory of Root File System.
+
 endif # OF
